# recorder

./: .env  .env.template  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
migrations/: 20250623110848_create_storage_settings_new.sql
src/: app.rs  config.rs  lib.rs  main.rs
src/api/: routes.rs
src/api/handlers/: mod.rs  storage_handler.rs
src/api/http/: routes.rs
src/api/http/dto/: mod.rs  storage_settings_dto.rs
src/api/http/handler/: mod.rs  storage_handler.rs
src/app/: app.rs  app_config.rs  app_container.rs  app_error.rs  app_state.rs  mod.rs  state.rs
src/domain/: container.rs  mod.rs
src/domain/entity/: address_entity.rs  device_entity.rs  mod.rs  record_entity.rs  storage_settings_entity.rs
src/domain/service/: device_service.rs  mod.rs  record_service.rs  storage_service.rs
src/infrastructure/: mod.rs
src/infrastructure/db/: mod.rs
src/infrastructure/recorder_pg/: connection.rs
src/infrastructure/recorder_pg/repository/: storage_repository.rs
src/infrastructure/recorderdb_pg/: connection.rs  mod.rs
src/infrastructure/recorderdb_pg/repository/: device_repository.rs  mod.rs  record_repository.rs  storage_repository.rs
test/: storage.rs
