[package]
name = "recorder"
version = "0.1.0"
edition = "2024"

[dependencies]
axum="0.8.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
tokio = { version =  "1.45.1", features = ["full"] }
tracing-subscriber = "0.3.19"
dotenvy="0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
