[package]
name = "recorder"
version = "0.1.0"
edition = "2024"

[dependencies]
axum="0.8.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
tokio = { version =  "1.45.1", features = ["full"] }
dotenvy="0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
utoipa = { version = "5.4.0", features = ["axum_extras"]}
utoipa-swagger-ui = { version = "9.0.2",  features = ["axum"] }
validator="0.20.0"
validator_derive = "0.20.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"]}
serde_json = "1.0.140"